force-app/main/default/objects/Police_Verification__c/Police_Verification__c.object-meta.xml
<CustomObject>
    <label>Police Verification</label>
    <nameField>
        <displayFormat>PV-{00000}</displayFormat>
        <label>PV Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Police Verifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>