force-app/main/default/objects/Police_Verification__c/fields/Passport_Application__c.field-meta.xml
<CustomField>
    <fullName>Passport_Application__c</fullName>
    <label>Passport Application</label>
    <type>Lookup</type>
    <referenceTo>Passport_Application__c</referenceTo>
    <relationshipName>Police_Verifications</relationshipName>
    <relationshipLabel>Police Verifications</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>