force-app/main/default/objects/Police_Verification__c/fields/Police_Station__c.field-meta.xml
<CustomField>
    <fullName>Police_Station__c</fullName>
    <label>Police Station</label>
    <type>Text</type>
    <length>120</length>
</CustomField>