force-app/main/default/objects/Police_Verification__c/fields/PV_Type__c.field-meta.xml
<CustomField>
    <fullName>PV_Type__c</fullName>
    <label>PV Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-PV</fullName>
            </value>
            <value>
                <fullName>Post-PV</fullName>
            </value>
            <value>
                <fullName>No PV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>