force-app/main/default/objects/Police_Verification__c/fields/Referred_Date__c.field-meta.xml
<CustomField>
    <fullName>Referred_Date__c</fullName>
    <label>Referred Date</label>
    <type>Date</type>
</CustomField>