force-app/main/default/objects/Police_Verification__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>