force-app/main/default/objects/Police_Verification__c/fields/Report_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Received_Date__c</fullName>
    <label>Report Received Date</label>
    <type>Date</type>
</CustomField>