force-app/main/default/objects/Police_Verification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Initiated</fullName>
                <default>true</default>
                <label>Not Initiated</label>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Adverse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>