force-app/main/default/objects/Police_Verification__c/fields/Verifying_Officer__c.field-meta.xml
<CustomField>
    <fullName>Verifying_Officer__c</fullName>
    <label>Verifying Officer</label>
    <length>120</length>
    <type>Text</type>
</CustomField>