force-app/main/default/objects/Police_Verification__c/validationRules/Cleared_Requires_Report_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Cleared_Requires_Report_Date</fullName>
    <active>true</active>
    <description>A clearance is only valid on the strength of a received police report, so the report date is mandatory.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Cleared&quot;), ISBLANK(Report_Received_Date__c) )</errorConditionFormula>
    <errorDisplayField>Report_Received_Date__c</errorDisplayField>
    <errorMessage>Enter the Report Received Date when marking police verification as Cleared.</errorMessage>
</ValidationRule>